--- a/sample.html
+++ b/sample.html
@@ -9,8 +9,37 @@
 
 <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="page">
+<header class="page-head">
+  <a href="#">
+    <img src="img/sitelogo.svg" alt="ONE POINT">
+  </a>
+</header>
+
+<main class="page-main">
+
+</main>
+
+<nav class="page-nav">
+  <ul>
+    <li><a href="#">トップ</a></li>
+    <li><a href="#">最新記事</a></li>
+    <li><a href="#">お食事シリーズ</a></li>
+    <li><a href="#">おでかけシリーズ</a></li>
+    <li><a href="#">お問い合わせ</a></li>
+  </ul>
+</nav>
 
 
+<button type="button" class="page-btn">
+	<span class="fas fa-bars" title="メニューを開く"></span>
+</button>
+	
+<button type="button" class="page-btn-close">
+	<span class="fas fa-times" title="メニューを閉じる"></span>	
+</button>
+
+
+	
 </body>
 </html>
