フッター追加

--- a/sample.html
+++ b/sample.html
@@ -36,10 +36,13 @@
 </button>
 	
 <button type="button" class="page-btn-close">
-	<span class="fas fa-times" title="メニューを閉じる"></span>	
+	<span class="fas fa-times" title="メニューを閉じる"></span>
 </button>
 
+<footer class="page-foot">
+	<p>© ONE POINT</p>
+</footer>
 
-	
+
 </body>
 </html>
